# rice_price_collector

./: .bumpversion.toml  .gitignore  404.html  Makefile  README.md  environment.yml  index.html  pyproject.toml
.github/workflows/: publish-to-pypi.yml
about/: index.html
api/downloader/: index.html
api/parser/: index.html
docs/: mkdocs.yml
docs/docs/: about.md  getting-started.md  index.md  pdf_downloader.md
docs/docs/api/: downloader.md  parser.md
docs/docs/downloader/: config.md  downloader.md  index.md
docs/docs/parser/: batch_extract.md  columns.md  config.md  index.md  utils.md
docs/docs/parser/extractors/: rice.md
downloader/: index.html
downloader/config/: index.html
downloader/downloader/: index.html
getting-started/: index.html
notebooks/: scrape_pdfs.ipynb  scrape_web.ipynb  test.ipynb
parser/: index.html
parser/batch_extract/: index.html
parser/columns/: index.html
parser/config/: index.html
parser/extractors/rice/: index.html
parser/utils/: index.html
pdf_downloader/: index.html
rice_price_collector/: __init__.py  __main__.py  config.py  dataset.py  features.py  plots.py
rice_price_collector/downloader/: __init__.py  __main__.py  config.py  pdf_dowloader.py  pdf_downloader.py
rice_price_collector/modeling/: predict.py  train.py
rice_price_collector/parser/: __init__.py  __main__.py  parser.py
search/: search_index.json
