[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rice_price_collector"
version = "0.0.1"
description = "this will collect rice prices from CBSL web"
authors = [
  { name = "chamodh" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["rice_price_collector"]
include = ["pyproject.toml", "rice_price_collector/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["rice_price_collector"]
force-sort-within-sections = true

